# dragon-shift

./: .dockerignore  .env.example  .gitignore  AGENT.md  Dockerfile  Dockerfile.local  ISSUES.md  README.md  backlog.md  e2e_scenario.md  kind-config.yaml  metadata.json  plan2.md  promt.md  refactor-plan.md  refactor.md  refactor_backend.md  refactor_frontend.md  refactor_frontend2.md  tasks.md
.github/workflows/: ci.yml  deploy.yml  publish-image.yml
docs/: AUTOMATED_TERRAFORM_DEPLOY.md  CLOUD_OPERABILITY.md  DEPLOYMENT_INPUTS.md  METHODOLOGY.md  REPO_MAP.md  VARIABLE_CATALOG.md
e2e/: e2e-scenario.config.ts  local-managed-server.mjs  package-lock.json  package.json  playwright.config.ts  playwright.local-restart.config.ts  project-profiles.ts  run-deployed.sh  view-validators.config.ts  visual-validators.config.ts
e2e/tests/: e2e-scenario-logger.ts  e2e-scenario.spec.ts  gameplay-helpers.ts  gameplay.spec.ts  load-workshop-30clients.spec.ts  load-workshop-test2-25-phase12.md  load-workshop-test2-25-phase12.spec.ts  restart-reconnect.spec.ts  view-validators.spec.ts  visual-validators.spec.ts
helm/dragon-shift/: Chart.yaml  values.gateway-example.yaml  values.kind-local.yaml  values.minikube.yaml  values.yaml
helm/dragon-shift/templates/: NOTES.txt  _helpers.tpl  app-deployment.yaml  app-service.yaml  ingress.yaml  managed-certificate.yaml  pdb.yaml  serviceaccount.yaml
operations/: CLOUD_OPERABILITY.md  terraform-apply.sh
platform/: ARCHITECTURE.md  Cargo.toml  PERSISTENCE_VALIDATION.md
platform/app-server/: Cargo.toml
platform/app-server/src/: app.rs  auth.rs  cache.rs  helpers.rs  http.rs  llm.rs  main.rs  tests.rs  ws.rs
platform/app-web/: Cargo.toml
platform/app-web/src/: api.rs  flows.rs  helpers.rs  main.rs  realtime.rs  state.rs
platform/app-web/src/components/: account_home.rs  advanced_panel.rs  app_bar.rs  archive_panel.rs  controls_panel.rs  create_character.rs  create_panel.rs  end_view.rs  handover_view.rs  hero.rs  join_panel.rs  lobby_view.rs  mod.rs  notice.rs  phase0_view.rs  phase1_view.rs  phase2_view.rs  pick_character.rs  session_panel.rs  sign_in.rs  voting_view.rs  workshop_brief.rs
platform/app-web/static/: style.css
platform/crates/domain/: Cargo.toml
platform/crates/domain/src/: lib.rs
platform/crates/persistence/: Cargo.toml
platform/crates/persistence/migrations/: 0001_initial_schema.sql  0002_distributed_runtime.sql  0003_realtime_connection_tombstones.sql  0004_app_sprite_defaults.sql  0005_repair_timeout_companion_sprites.sql  0006_global_characters.sql  0007_accounts_and_ownership.down.sql  0007_accounts_and_ownership.sql  0008_character_names.sql  0009_open_workshops_indexes.sql
platform/crates/persistence/src/: lib.rs  postgres_tests.rs
platform/crates/protocol/: Cargo.toml
platform/crates/protocol/src/: lib.rs
platform/crates/realtime/: Cargo.toml
platform/crates/realtime/src/: lib.rs
platform/crates/security/: Cargo.toml
platform/crates/security/src/: lib.rs
platform/xtask/: Cargo.toml
platform/xtask/src/: main.rs
rust-next/: ARCHITECTURE.md  Cargo.toml  ROADMAP.md  SPRINT9_ROLLBACK_PLAN.md  SPRINT9_SMOKE_CHECKLIST.md
rust-next/app-server/: Cargo.toml
rust-next/app-server/src/: main.rs
rust-next/app-web/: Cargo.toml
rust-next/app-web/src/: main.rs
rust-next/crates/domain/: Cargo.toml
rust-next/crates/domain/src/: lib.rs
rust-next/crates/persistence/: Cargo.toml
rust-next/crates/persistence/src/: lib.rs
rust-next/crates/protocol/src/: lib.rs
rust-next/crates/realtime/src/: lib.rs
rust-next/crates/security/src/: lib.rs
rust-next/xtask/: Cargo.toml
rust-next/xtask/src/: main.rs
scripts/: generate-fallback-sprites.mjs  refresh-local-kube-auth.sh
sprites/llm-fallback/: README.md  manifest.json
sprites/llm-fallback/01-violet-crystal/: meta.json
sprites/llm-fallback/02-moss-forest/: meta.json
sprites/llm-fallback/03-sunset-coral/: meta.json
sprites/llm-fallback/04-midnight-moon/: meta.json
terraform/: README.md
terraform/bootstrap/: .terraform.lock.hcl  main.tf  outputs.tf  providers.tf  variables.tf
terraform/environments/production/foundation/: main.tf  outputs.tf  providers.tf  terraform.tfvars.example  variables.tf
terraform/environments/production/platform/: .terraform.lock.hcl  main.tf  outputs.tf  providers.tf  terraform.tfvars.example  variables.tf
terraform/modules/cloud_sql/: main.tf  outputs.tf  variables.tf
terraform/modules/gke_autopilot/: main.tf  outputs.tf  variables.tf
terraform/modules/network/: main.tf  outputs.tf  variables.tf
terraform/modules/project_services/: main.tf  outputs.tf  variables.tf
