[workspace]
members = [
  "app-server",
  "app-web",
  "crates/protocol",
  "crates/domain",
  "crates/persistence",
  "crates/security",
  "crates/realtime",
  "xtask",
]
resolver = "2"

[workspace.package]
edition = "2024"
version = "0.1.0"
license = "MIT"
authors = ["dragon-switch migration workspace"]

[workspace.dependencies]
axum = "0.8.8"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tower-http = { version = "0.6", features = ["cors", "trace", "fs", "set-header"] }
uuid = { version = "1", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["clock", "serde"] }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "json"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
tempfile = "3"
dioxus = "0.7.0"
dioxus-web = "0.7.0"
protocol = { path = "crates/protocol" }
domain = { path = "crates/domain" }
persistence = { path = "crates/persistence" }
security = { path = "crates/security" }
realtime = { path = "crates/realtime" }

[profile.wasm-release]
inherits = "release"
opt-level = "z"
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"
