[workspace]
members = [
  "app-server",
  "app-web",
  "crates/protocol",
  "crates/domain",
  "crates/persistence",
  "crates/security",
  "crates/realtime",
  "xtask",
]
resolver = "2"

[workspace.package]
edition = "2021"
version = "0.1.0"
license = "MIT"
authors = ["dragon-switch migration workspace"]

[workspace.dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }
uuid = { version = "1", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["clock", "serde"] }
dioxus = "0.5"
dioxus-web = "0.5"
protocol = { path = "crates/protocol" }
domain = { path = "crates/domain" }
persistence = { path = "crates/persistence" }
security = { path = "crates/security" }
realtime = { path = "crates/realtime" }
