[package]
name = "app-server"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
axum = { workspace = true, features = ["ws"] }
chrono.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tower = "0.5"
tower-http.workspace = true
serde.workspace = true
serde_json.workspace = true
protocol.workspace = true
domain.workspace = true
persistence.workspace = true
sqlx = { workspace = true, features = ["postgres"] }
security.workspace = true
realtime.workspace = true
reqwest.workspace = true
uuid.workspace = true
image.workspace = true
base64.workspace = true
jsonwebtoken.workspace = true

[dev-dependencies]
futures-util = "0.3"
tokio-tungstenite = "0.24"
tempfile.workspace = true
