[package]
name = "app-web"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
console_error_panic_hook = "0.1"
dioxus = { version = "0.7.0", default-features = false, features = ["minimal"] }
dioxus-web = { version = "0.7.0", default-features = false }
js-sys = "0.3"
protocol.workspace = true
serde.workspace = true
serde_json.workspace = true
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["ErrorEvent", "Event", "Headers", "Location", "MessageEvent", "Request", "RequestInit", "Response", "Storage", "UrlSearchParams", "WebSocket", "Window"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

[dev-dependencies]
tokio.workspace = true
