[package]
name = "xtask"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
protocol.workspace = true
tokio.workspace = true
serde_json.workspace = true
sqlx.workspace = true
reqwest = { version = "0.12", default-features = false, features = ["json"] }
futures-util = "0.3"
tokio-tungstenite = "0.24"
