[package]
name = "app-server"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
axum.workspace = true
chrono.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tower = "0.5"
tower-http.workspace = true
serde.workspace = true
serde_json.workspace = true
protocol.workspace = true
domain.workspace = true
persistence.workspace = true
security.workspace = true
realtime.workspace = true
uuid.workspace = true
