[package]
name = "app-web"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
dioxus.workspace = true
dioxus-web.workspace = true
protocol.workspace = true
reqwest = { version = "0.12", default-features = false, features = ["json"] }
serde_json.workspace = true
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["ErrorEvent", "Event", "MessageEvent", "Storage", "WebSocket", "Window"] }
