[package]
name = "persistence"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
chrono.workspace = true
sqlx = { workspace = true, features = ["migrate"] }
thiserror.workspace = true
domain.workspace = true
protocol.workspace = true
serde_json.workspace = true
uuid.workspace = true
tokio = { workspace = true, features = ["rt"] }
